# rucola

./: .gitignore  .gitmodules  CMakeLists.txt  cl.cpp  remove_cmake_cache
CMake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
include/: client.hpp  exception.hpp
include/gui/: base.hpp  button.hpp  controll.hpp  label.hpp
include/math/: color.hpp  point.hpp  rect.hpp
include/sdlw/: application.hpp  error.hpp  sdlw.hpp  timer.hpp  window.hpp
include/sdlw/events/: base.hpp  event_mouse.hpp  events.hpp
include/sdlw/events/event/: window.hpp
include/sdlw/ttf/: font.hpp  general.hpp
include/sdlw/video/: rect.hpp  render.hpp  surface.hpp  video.hpp
src/: client.cpp  exception.cpp
src/gui/: base.cpp  button.cpp  controll.cpp  label.cpp
src/math/: color.cpp  point.cpp  rect.cpp
src/sdlw/: application.cpp  error.cpp  timer.cpp  window.cpp
src/sdlw/events/: base.cpp  event_mouse.cpp  events.cpp
src/sdlw/events/event/: mouse.cpp  window.cpp
src/sdlw/ttf/: font.cpp  general.cpp
src/sdlw/video/: rect.cpp  render.cpp  surface.cpp  video.cpp
